# ghga-datasteward-kit

./: .description.md  .gitignore  .mandatory_files_ignore  .mypy.ini  .pre-commit-config.yaml  .readme_template.md  .static_files_ignore  Dockerfile  Dockerfile.debian  README.md  config_schema.json  ingest_config.md  load_config.md  metadata_config.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  s3_upload_config.md  setup.cfg
.devcontainer/: Dockerfile  dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.devcontainer~legacy/: Dockerfile
.pyproject_generation/: pyproject_custom.toml  pyproject_template.toml
.template/: mandatory_files_ignore.txt  static_files_ignore.txt
demo/: .metldata.yaml  artifacts.json  loader_config.yaml  metadata_config.yaml  model.yaml  run_metldata.sh  run_steps.sh  test.py
example_data/: example_otp.tsv  template.nct.yaml  template.upload.yaml
ghga_datasteward_kit/: __init__.py  __main__.py  batch_s3_upload.py  catalog_accession_generator.py  cli.py  config.py  envelope_generator.py  file_ingest.py  generate_metadata_catalog_accessions.py  loading.py  main.py  metadata.py  models.py  s3_upload.py  utils.py
lock/: requirements-dev-template.in  requirements-dev.in  requirements-dev.txt  requirements.txt
scripts/: license_checker.py  update_config_docs.py
src/: __init__.py  nct_upload.py  otp_tsv_to_upload.py  s3_upload.py
tests/: __init__.py  test_encryption_decryption.py  test_file_deletion.py  test_file_ingest.py  test_metadata.py  test_retries.py  test_s3_upload.py  test_utils.py  (+1 more)
(+103 files in other folders)
